# fraocme

./: .coverage  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: format.yml  lint.yml  publish.yml  test.yml
fraocme/: __init__.py  cli.py  main.py  test_runner.py
fraocme/common/: __init__.py  coordinate_utils.py  decorators.py  parser.py  printer.py  range_utils.py  sequence_utils.py  utils.py
fraocme/core/: __init__.py  runner.py  solver.py
fraocme/cycle/: __init__.py  analysis.py  printer.py
fraocme/debug/: __init__.py  colors.py  printer.py
fraocme/examples/: README.md  stats.json
fraocme/examples/days/day_00/: input.txt  solution.py
fraocme/examples/days/day_01/: README.md  input.txt  solution.py
fraocme/examples/days/day_02/: README.md  input.txt  solution.py
fraocme/examples/days/day_03/: README.md  input.txt  solution.py
fraocme/examples/days/day_04/: README.md  input.txt  solution.py
fraocme/examples/days/day_05/: solution.py
fraocme/examples/days/day_06/: README.md  solution.py
fraocme/examples/days/day_07/: input.txt  solution.py
fraocme/examples/days/day_101/: README.md
fraocme/examples/days/day_102/: input.txt  solution.py
fraocme/examples/days/day_103/: input.txt  solution.py
fraocme/examples/days/day_105/: input.txt  solution.py
fraocme/graph/: __init__.py  analysis.py  parser.py  printer.py  types.py
fraocme/grid/: README.md  __init__.py  core.py  parser.py  printer.py  regions.py  types.py  utils.py
fraocme/math/: __init__.py  binary.py  geometry.py  number_theory.py  printer.py  types.py
fraocme/parsers/: __init__.py  base.py  grid.py
fraocme/profiling/: __init__.py  stats.py  timer.py
fraocme/types/: main_args.py
fraocme/ui/: __init__.py  colors.py  printer.py
fraocme/utils/: __init__.py  input.py  map.py
tests/: README.md  test_bits.py  test_cli.py  test_common.py  test_coordinate_utils.py  test_core.py  test_cycle.py  test_debug.py  test_graph.py  test_grid.py  test_grid_advanced.py  test_math.py  test_parsers.py  test_profiling.py  test_range_utils.py  test_ui.py
